--- a/test/style.wxss
+++ b/test/style.wxss
@@ -4,11 +4,13 @@
 
 .body .main {
   color: red;
-  font-size: 120px;
+  font-size: 120rpx;
   border: none;
-  font: 100;
+  font: 100rpx;
   border-radius: initial;
   margin: 0;
   display: block;
+  box-sizing: border-box;
+  margin-right: 20rpx;
   padding-left: 10px;
 }
