--- a/demo/style.scss
+++ b/demo/style.scss
@@ -2,7 +2,8 @@
   background-color: red;
   .main {
     color: red;
-    font-size: 120rpx;
+    font-size: 36rpx;
+    background: #000;
 
     border: none;
     border-bottom: 1px solid blue;
