--- a/demo/style.wxss
+++ b/demo/style.wxss
@@ -4,7 +4,8 @@
 
 .body .main {
   color: red;
-  font-size: 120rpx;
+  font-size: 36rpx;
+  background: #000;
   border: none;
   border-bottom: 1px solid blue;
   border: 1px solid red;
